Fixed height jumping issue.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@
     justify-items: stretch;
     align-items: stretch;
     font-family: 'Slabo 27px', serif;
-    min-height: 29rem;
+    min-height: 30rem;
 }
 
 .container > div  {
